# rheomodel

./: README.ipynb  README.md  pyproject.toml  requirements.txt
rheomodel/: __init__.py  functions.py  models.bib  models.py
